<resources>
    <string name="app_name">Training apparatus</string>
    <string name="question_mark">\?</string>
    <string name="welcome_title">Number Composition</string>
    <string name="button_understand">Clear</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Choose a level:</string>
    <string name="choose_operation">Select an action:</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="choose_game">Choose a game:</string>
    <string name="game_counting">Verbal counting</string>
    <string name="game_memory">Visual memory</string>
    <string name="easy_level">Easy</string>
    <string name="normal_level">Average</string>
    <string name="hard_level">Hard</string>
    <string name="test_level">Test</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Your account: %s</string>
    <string name="score_percentage">Percentage of correct answers: %s</string>
    <string name="retry">Try again</string>
    <string name="right_answers">%s correct answers out of %s needed</string>
    <string name="required_percentage">Required percentage of correct answers: %s</string>
    <string name="required_score">Required number of correct answers: %s</string>
    <string name="progress_answers">%s correct answers (minimum %s)</string>
    <string name="statistic_memory">Best visual memory score:\n %s\nwins in a row :%s</string>
    <string name="statistic_verbal">The best score\nfor time:\n%s\n%s level %s :\nanswers : %s\ncorrect answers : %s</string>
    <string name="statistic_verbal_endurance">The best score\nfor endurance:\n%s\n%s level %s :\nanswers : %s\ncorrect answers : %s</string>
    <string name="ok">ok</string>
    <string name="no">no</string>

    <string name="multiplication_table">Multiplication table\n\n
        2 x 2 = 4  \t\t\t   3 x 2 = 6\n
        2 x 3 = 6   \t\t\t  3 x 3 = 9\n
        2 x 4 = 8   \t\t\t  3 x 4 = 12\n
        2 x 5 = 10  \t\t    3 x 5 = 15\n
        2 x 6 = 12  \t\t    3 x 6 = 18\n
        2 x 7 = 14  \t\t    3 x 7 = 21\n
        2 x 8 = 16  \t\t    3 x 8 = 24\n
        2 x 9 = 18  \t\t    3 x 9 = 27\n\n

        4 x 2 = 8   \t\t\t  5 x 2 = 10\n
        4 x 3 = 12  \t\t    5 x 3 = 15\n
        4 x 4 = 16  \t\t    5 x 4 = 20\n
        4 x 5 = 20  \t\t    5 x 5 = 25\n
        4 x 6 = 24  \t\t    5 x 6 = 30\n
        4 x 7 = 28  \t\t    5 x 7 = 35\n
        4 x 8 = 32  \t\t    5 x 8 = 40\n
        4 x 9 = 36  \t\t    5 x 9 = 45\n\n

        6 x 2 = 12  \t\t     7 x 2 = 14\n
        6 x 3 = 18  \t\t     7 x 3 = 21\n
        6 x 4 = 24  \t\t     7 x 4 = 28\n
        6 x 5 = 30  \t\t     7 x 5 = 35\n
        6 x 6 = 36  \t\t     7 x 6 = 42\n
        6 x 7 = 42  \t\t     7 x 7 = 49\n
        6 x 8 = 48  \t\t     7 x 8 = 56\n
        6 x 9 = 54  \t\t     7 x 9 = 63\n\n

        8 x 2 = 16  \t\t     9 x 2 = 18\n
        8 x 3 = 24  \t\t     9 x 3 = 27\n
        8 x 4 = 32  \t\t     9 x 4 = 36\n
        8 x 5 = 40  \t\t     9 x 5 = 45\n
        8 x 6 = 48  \t\t     9 x 6 = 54\n
        8 x 7 = 56  \t\t     9 x 7 = 63\n
        8 x 8 = 64  \t\t     9 x 8 = 72\n
        8 x 9 = 72  \t\t     9 x 9 = 81</string>
    <string name="tables_division">\nDivision table\n\n
        2 : 2 = 1  \t\t\t  3 : 3 = 1  \n
        4 : 2 = 2  \t\t\t  6 : 3 = 2\n
        6 : 2 = 3  \t\t\t  9 : 3 = 3\n
        8 : 2 = 4  \t\t\t  12 : 3 = 4\n
        10 : 2 = 5 \t\t    15 : 3 = 5\n
        12 : 2 = 6 \t\t    18 : 3 = 6\n
        14 : 2 = 7 \t\t    21 : 3 = 7\n
        16 : 2 = 8 \t\t    24 : 3 = 8\n
        18 : 2 = 9 \t\t    27 : 3 = 9\n
        20 : 2 = 10	\t\t   30 : 3 = 10\n\n

        4 : 4 = 1  \t\t   5 : 5 = 1\n
        8 : 4 = 2  \t\t   10 : 5 = 2\n
        12 : 4 = 3  \t\t  15 : 5 = 3\n
        16 : 4 = 4  \t\t  20 : 5 = 4\n
        20 : 4 = 5  \t\t  25 : 5 = 5\n
        24 : 4 = 6  \t\t  30 : 5 = 6\n
        28 : 4 = 7  \t\t  35 : 5 = 7\n
        32 : 4 = 8  \t\t  40 : 5 = 8\n
        36 : 4 = 9  \t\t  45 : 5 = 9\n
        40 : 4 = 10  \t\t 50 : 5 = 10\n\n

        6 : 6 = 1  \t\t 7 : 7 = 1\n
        12 : 6 = 2 \t\t 14 : 7 = 2\n
        18 : 6 = 3 \t\t 21 : 7 = 3\n
        24 : 6 = 4 \t\t 28 : 7 = 4\n
        30 : 6 = 5 \t\t 35 : 7 = 5\n
        36 : 6 = 6 \t\t 42 : 7 = 6\n
        42 : 6 = 7 \t\t 49 : 7 = 7\n
        48 : 6 = 8 \t\t 56 : 7 = 8\n
        54 : 6 = 9 \t\t 63 : 7 = 9\n
        60 : 6 = 10\t\t 70 : 7 = 1\n\n

        8 : 8 = 1  \t\t 9 : 9 = 1\n
        16 : 8 = 2 \t\t 18 : 9 = 2\n
        24 : 8 = 3 \t\t 27 : 9 = 3\n
        32 : 8 = 4 \t\t 36 : 9 = 4\n
        40 : 8 = 5 \t\t 45 : 9 = 5\n
        48 : 8 = 6 \t\t 54 : 9 = 6\n
        56 : 8 = 7 \t\t 63 : 9 = 7\n
        64 : 8 = 8 \t\t 72 : 9 = 8\n
        72 : 8 = 9 \t\t 81 : 9 = 9\n
        80 : 8 = 10\t\t 90 : 9 = 10
    </string>
    <string name="multiplication_description">Multiplying Numbers in Your Mind \nMultiplication is the repeated repetition of a number. If you need to multiply 8 by 4, this means that the number 8 must be repeated 4 times. 84=8+8+8+8=32 Since all complex problems are reduced to simpler ones, you need to be able to multiply all single-digit numbers. There is a great tool for this - the multiplication table. If you do not know this table by heart, then we strongly recommend that you first learn it and only then take up the practice of mental counting. In addition, there is, in fact, nothing to learn there. Multiplication of multidigit numbers by single digits First, practice multiplying multidigit numbers by single digits. Let it be necessary to multiply 528 by 6. We divide the number 528 into digits and go from the oldest to the youngest. We multiply first and then add the results. 528=500+20+8 5286=5006+206+86=3000+120+48=3168 Multiplication of two-digit numbers Here, too, there is nothing complicated, only the load on short-term memory is a little more. We multiply 28 and 32. To do this, we reduce the whole operation to multiplication by single-digit numbers. Let s represent 32 as 30+2 2832=2830+282=2030+830+202+82=600+240+40+16=896 Another example. Multiply 79 by 57. This means that you need to take the number 79 57 times. Let s break the whole operation into stages. First we multiply 79 by 50, and then - 79 by 7.</string>
    <string name="add_description">Adding Numbers in Your Mind \nTo learn how to add large numbers mentally, you need to be able to add numbers up to 10 without error. Ultimately, any complex task comes down to performing a few trivial steps. Most often, problems and errors occur when adding numbers with a “go through 10”. When adding (and even when subtracting), it is convenient to use the technique of reliance on a dozen. What s this? First, we mentally ask ourselves how much one of the terms is missing up to 10, and then we add to 10 the difference remaining up to the second term. For example, let s add the numbers 8 and 6. To get 10 from 8, 2 is not enough. Then 4 = 6-2 will remain to be added to 10. As a result, we get: 8+6=(8+2)+4=10+4=14 The main trick with adding large numbers is to break them into bit parts, and then add these parts together. Suppose we need to add two numbers: 356 and 728. The number 356 can be represented as 300+50+6. Similarly, 728 would be 700+20+8. Now add up: 356+728=(300+700)+(50+20)+(8+6)=1000+70+14=1084</string>
    <string name="subtraction_descriptiom">Subtracting Numbers in Your Mind\n Subtracting numbers will also come easy. But unlike addition, where each number is divided into bit parts, when subtracting, you only need to “break” the number that we subtract. For example, how much is 528-321? We break the number 321 into bit parts and get: 321=300+20+1. Now we count: 528-300-20-1=228-20-1=208-1=207 Try to visualize the processes of addition and subtraction. At school, everyone was taught to count in a column, that is, from top to bottom. One way to restructure thinking and speed up counting is not to count from top to bottom, but from left to right, breaking numbers into place parts.</string>
    <string name="division_descriptiob">Division of numbers in the mind \nIt remains to deal with the division. In fact, this is the inverse operation of multiplication. With the division of numbers up to 100, no problems should arise at all - after all, there is a multiplication table that you know by heart. Dividing by a single number When dividing multi-digit numbers by a single one, it is necessary to select the largest possible part, which can be divided using the multiplication table. For example, there is the number 6144, which needs to be divided by 8. We recall the multiplication table and understand that the number 5600 will be divided by 8. Let s imagine the example as follows: 6144:8=(5600+544):8=700+544:8 Further from number 544, we also select the largest number that is divisible by 8. We have: 544:8=(480+64):8=60+64:8 It remains to divide 64 by 8 and get the result by adding all the results of the division 64:8=8 6144:8=700+60+8=768 Dividing by a two-digit number When dividing by a two-digit number, you must use the rule of the last digit of the result when multiplying two numbers. When multiplying two multi-digit numbers, the last digit of the multiplication result always coincides with the last digit of the result of multiplying the last digits of these numbers. For example, let s multiply 1325 by 656. As a rule, the last digit in the resulting number will be 0, since 56=30. Indeed, 1325656=869200. Now, armed with this valuable information, consider dividing by a two-digit number. How much is 4424:56? Initially, we will use the “fitting” method and find the limits within which the result lies. We need to find a number that, when multiplied by 56, will give 4424. Intuitively, let s try the number 80. 5680=4480 So the desired number is less than 80 and clearly greater than 70. Let s determine its last digit. Its product by 6 must end with the number 4. According to the multiplication table, the results 4 and 9 are suitable for us. It is logical to assume that the result of division can be either the number 74 or 79. Check: 7956=4424 Done, the solution has been found! If the number 79 had not come up, the second option would certainly have been correct.</string>
    <string name="tables_title">Tables</string>
    <string name="tb_multiplication">Multiplications</string>
    <string name="tb_division">Divisions</string>
    <string name="help_add">addition</string>
    <string name="help_sub">subtraction</string>
    <string name="help_mul">multiplication</string>
    <string name="help_div">division</string>
    <string name="repeat">Repeat</string>
    <string name="select_level_difficulty">Exit</string>
    <string name="settings">Settings</string>
    <string name="enable_sound">enable</string>
    <string name="enable_sound_title">Turn on sound</string>
    <string name="game_options">game options</string>
    <string name="game_options_title">Oral account option</string>
    <string name="endurance_game">endurance game</string>
    <string name="time_game">time game</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="difficulty_level_key">difficulty level</string>
    <string name="choose_arithmetic_operation">Select arithmetic operation</string>
    <string name="arithmetic_operation_key">arithmetic operation</string>
</resources>